# Hexpeek

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
src/: file_reader.cpp  file_reader.hpp  hex_formatter.cpp  hex_formatter.hpp  main.cpp  searcher.cpp  searcher.hpp
tests/: test_hexpeek.cpp
